<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.login.LoginFragment">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/customer"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:id="@+id/iv_AppIcon"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_AppName"
        android:text="@string/app_name"
        android:layout_below="@+id/iv_AppIcon"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_AppName"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Username"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserName"

            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="custom">

            <AutoCompleteTextView
                android:id="@+id/et_UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PASSWORD"

            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="custom">

            <AutoCompleteTextView
                android:id="@+id/et_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_ForgotPassword"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ForgotPassword"
            android:textColor="@color/purple_200"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_LOGIN"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/layout1"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/purple_200"
        android:text="@string/LOGIN"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_FRINGERPRINT"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btn_LOGIN"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/FingerPrintLogin"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_OpenAnAccount"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btn_FRINGERPRINT"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/outlinedbutton"
        android:text="@string/OPENANACCOUNT"
        android:textColor="@color/purple_500"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:divider="@drawable/divider_drawable"
        android:orientation="vertical"
        android:showDividers="beginning">

        <TextView
            android:id="@+id/tv_Support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/Support"
            android:textColor="@color/purple_200"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_Version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="15dp"
            android:text="@string/Support"
            android:textColor="@color/black"
            android:textSize="10sp" />
    </LinearLayout>



</RelativeLayout>