<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ReportFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.VASOOL_DRIVE.AppBarOverlay">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?colorPrimary"
            android:elevation="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Report"
                android:textColor="?colorOnPrimary"
                android:id="@+id/et_Report"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_weight="3"/>



        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="5dp"

        android:verticalScrollbarPosition="right"

        >

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar_layout"
        android:layout_marginTop="30dp"

        android:orientation="vertical"
        android:scrollbars="vertical"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:id="@+id/layout3"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Plan"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:id="@+id/Plan"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:background="?colorSurface"
            android:id="@+id/layout4"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/DailySummary"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:id="@+id/DailySummary"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout5"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/LineSummary"
                android:id="@+id/LineSummary"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout6"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/ExpenseSummary"
                android:id="@+id/ExpenseSummary"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout7"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/InvestmentSummary"
                android:id="@+id/InvestmentSummary"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout9"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Investment_Expense_Summary"
                android:id="@+id/Investment_Expense_Summary"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout10"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Book_Excess_Loss_Summary"
                android:id="@+id/Book_Excess_Loss_Summary"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout11"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Loan_Summary"
                android:id="@+id/LoanSummary"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout12"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/New_Customer_Summary"
                android:id="@+id/New_Customer_Summary"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout13"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Bad_Loan_Summary"
                android:id="@+id/Bad_Loan_Summary"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout14"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/New_Bad_Load_By_Date_Summary"
                android:id="@+id/New_Bad_Loan_By_Date_Summary"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout15"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Missing_Customer_Summary"
                android:id="@+id/Missing_Customer_Summary"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout16"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Completed_Loan_Summary"
                android:id="@+id/Completed_Loan_Summary"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout17"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Non_Performance_Loan_Report"
                android:id="@+id/Non_Performance_Loan_Report"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:layout_marginBottom="5dp"
            android:id="@+id/layout18"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Loan_Analysis"
                android:id="@+id/Loan_Analysis"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorSurface"
            android:id="@+id/layout19"
            android:layout_marginBottom="30dp"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Ledger_Report"
                android:id="@+id/Ledger_Report"
                android:textSize="15sp"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginStart="20dp"/>

        </LinearLayout>
    </LinearLayout>

    </ScrollView>
</RelativeLayout>