<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.login.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/layout"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/OTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_weight="3"
        app:endIconMode="custom"
        android:textColorHint="@color/black"
        android:hint="@string/OTP"
        app:boxBackgroundColor="@color/white"

        >

        <AutoCompleteTextView
            android:id="@+id/et_OTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_weight="3"
        app:endIconMode="custom"
        android:textColorHint="@color/black"
        android:hint="@string/Password"
        app:boxBackgroundColor="@color/white"

        >

        <AutoCompleteTextView
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_weight="3"
        app:endIconMode="custom"
        android:textColorHint="@color/black"
        android:hint="@string/ConfirmPassword"
        app:boxBackgroundColor="@color/white"

        >

        <AutoCompleteTextView
            android:id="@+id/et_ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_Submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_200"
            android:text="@string/Submit"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>